Добавляет разметку для promo

--- a/source/main.html
+++ b/source/main.html
@@ -286,7 +286,18 @@
     </nav>
   </header>
   <main class="site-main">
-    
+    <section class="promo">
+      <div class="promo__inner container">
+        <h1 class="h1 promo__title">
+          Платформа для
+          поиска курсов и
+          мастер-классов
+        </h1>
+        <p class="promo__text">
+          Более 6 544 курсов от 1803 школ, которые можете отфильтровать по цене, рейтингу и месторасположению
+        </p>
+      </div>
+    </section>
   </main>
   <footer class="site-footer">
     <div class="container site-footer__inner-top">
