Добавляет разметку master-classes

--- a/source/main.html
+++ b/source/main.html
@@ -298,6 +298,37 @@
         </p>
       </div>
     </section>
+    <section class="master-classes">
+      <div class="container master-classes__inner">
+        <h2 class="h2 master-classes__title">
+          Ближайшие
+          мастер-классы
+        </h2>
+        <ul class="master-classes__list">
+          <li class="master-classes__item">
+
+          </li>
+          <li class="master-classes__item">
+
+          </li>
+          <li class="master-classes__item">
+
+          </li>
+          <li class="master-classes__item">
+
+          </li>
+          <li class="master-classes__item">
+
+          </li>
+          <li class="master-classes__item">
+
+          </li>
+        </ul>
+        <a href="#" class="button master-classes__watch-more">
+          Смотреть все мастер-классы
+        </a>
+      </div>
+    </section>
   </main>
   <footer class="site-footer">
     <div class="container site-footer__inner-top">
