добавляет разметку и графику для master-class

--- a/source/main.html
+++ b/source/main.html
@@ -206,7 +206,7 @@
           </span>
         </a>
         <div class="search">
-          <form method="get" action="search.php" autocomplete="off" >
+          <form method="get" action="search.php" autocomplete="off">
             <a href="#" class="search__button-cancel">
               <svg width="15" height="6">
                 <use xlink:href="#arrow-search-icon"></use>
@@ -306,22 +306,106 @@
         </h2>
         <ul class="master-classes__list">
           <li class="master-classes__item">
-
+            <a href="#" class="master-class">
+              <div class="master-class__time">
+                8
+                <p>
+                  декабря
+                </p>
+              </div>
+              <p class="master-class__name">
+                Мастер-класс как выучить по
+                100 английских слов вдень с
+                помощью 3 правил
+              </p>
+              <img src="img/master-classes-desktop--1-@1x.jpg" width="440" height="252"
+                   alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
+            </a>
           </li>
           <li class="master-classes__item">
-
+            <a href="#" class="master-class">
+              <div class="master-class__time">
+                11
+                <p>
+                  декабря
+                </p>
+              </div>
+              <p class="master-class__name">
+                Мастер-класс как выучить по
+                100 английских слов вдень с
+                помощью 3 правил
+              </p>
+              <img src="img/master-classes-desktop--2-@1x.jpg" width="440" height="252"
+                   alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
+            </a>
           </li>
           <li class="master-classes__item">
-
+            <a href="#" class="master-class">
+              <div class="master-class__time">
+                13
+                <p>
+                  декабря
+                </p>
+              </div>
+              <p class="master-class__name">
+                Мастер-класс как выучить по
+                100 английских слов вдень с
+                помощью 3 правил
+              </p>
+              <img src="img/master-classes-desktop--3-@1x.jpg" width="440" height="252"
+                   alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
+            </a>
           </li>
           <li class="master-classes__item">
-
+            <a href="#" class="master-class">
+              <div class="master-class__time">
+                17
+                <p>
+                  декабря
+                </p>
+              </div>
+              <p class="master-class__name">
+                Мастер-класс как выучить по
+                100 английских слов вдень с
+                помощью 3 правил
+              </p>
+              <img src="img/master-classes-desktop--4-@1x.jpg" width="440" height="252"
+                   alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
+            </a>
           </li>
           <li class="master-classes__item">
-
+            <a href="#" class="master-class">
+              <div class="master-class__time">
+                22
+                <p>
+                  декабря
+                </p>
+              </div>
+              <p class="master-class__name">
+                Мастер-класс как выучить по
+                100 английских слов вдень с
+                помощью 3 правил
+              </p>
+              <img src="img/master-classes-desktop--5-@1x.jpg" width="440" height="252"
+                   alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
+            </a>
           </li>
           <li class="master-classes__item">
-
+            <a href="#" class="master-class">
+              <div class="master-class__time">
+                29
+                <p>
+                  декабря
+                </p>
+              </div>
+              <p class="master-class__name">
+                Мастер-класс как выучить по
+                100 английских слов вдень с
+                помощью 3 правил
+              </p>
+              <img src="img/master-classes-desktop--6-@1x.jpg" width="440" height="252"
+                   alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
+            </a>
           </li>
         </ul>
         <a href="#" class="button master-classes__watch-more">
