Добавляет оберти даты и разделения в заголовке

--- a/source/main.html
+++ b/source/main.html
@@ -302,14 +302,17 @@
       <div class="container master-classes__inner">
         <h2 class="h2 master-classes__title">
           Ближайшие
+          <br>
           мастер-классы
         </h2>
         <ul class="master-classes__list">
           <li class="master-classes__item">
             <a href="#" class="master-class">
               <div class="master-class__time">
-                8
-                <p>
+                <p class="master-class__day">
+                  8
+                </p>
+                <p class="master-class__month">
                   декабря
                 </p>
               </div>
@@ -318,15 +321,17 @@
                 100 английских слов вдень с
                 помощью 3 правил
               </p>
-              <img src="img/master-classes-desktop--1-@1x.jpg" width="440" height="252"
+              <img src="img/master-classes-desktop--1-@1x.jpg" class="master-classes__img" width="440" height="252"
                    alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
             </a>
           </li>
           <li class="master-classes__item">
             <a href="#" class="master-class">
               <div class="master-class__time">
-                11
-                <p>
+                <p class="master-class__day">
+                  11
+                </p>
+                <p class="master-class__month">
                   декабря
                 </p>
               </div>
@@ -335,15 +340,17 @@
                 100 английских слов вдень с
                 помощью 3 правил
               </p>
-              <img src="img/master-classes-desktop--2-@1x.jpg" width="440" height="252"
+              <img src="img/master-classes-desktop--2-@1x.jpg" class="master-classes__img" width="440" height="252"
                    alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
             </a>
           </li>
           <li class="master-classes__item">
             <a href="#" class="master-class">
               <div class="master-class__time">
-                13
-                <p>
+                <p class="master-class__day">
+                  13
+                </p>
+                <p class="master-class__month">
                   декабря
                 </p>
               </div>
@@ -352,15 +359,17 @@
                 100 английских слов вдень с
                 помощью 3 правил
               </p>
-              <img src="img/master-classes-desktop--3-@1x.jpg" width="440" height="252"
+              <img src="img/master-classes-desktop--3-@1x.jpg" class="master-classes__img" width="440" height="252"
                    alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
             </a>
           </li>
           <li class="master-classes__item">
             <a href="#" class="master-class">
               <div class="master-class__time">
-                17
-                <p>
+                <p class="master-class__day">
+                  17
+                </p>
+                <p class="master-class__month">
                   декабря
                 </p>
               </div>
@@ -369,15 +378,17 @@
                 100 английских слов вдень с
                 помощью 3 правил
               </p>
-              <img src="img/master-classes-desktop--4-@1x.jpg" width="440" height="252"
+              <img src="img/master-classes-desktop--4-@1x.jpg" class="master-classes__img" width="440" height="252"
                    alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
             </a>
           </li>
           <li class="master-classes__item">
             <a href="#" class="master-class">
               <div class="master-class__time">
-                22
-                <p>
+                <p class="master-class__day">
+                  22
+                </p>
+                <p class="master-class__month">
                   декабря
                 </p>
               </div>
@@ -386,15 +397,17 @@
                 100 английских слов вдень с
                 помощью 3 правил
               </p>
-              <img src="img/master-classes-desktop--5-@1x.jpg" width="440" height="252"
+              <img src="img/master-classes-desktop--5-@1x.jpg" class="master-classes__img" width="440" height="252"
                    alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
             </a>
           </li>
           <li class="master-classes__item">
             <a href="#" class="master-class">
               <div class="master-class__time">
-                29
-                <p>
+                <p class="master-class__day">
+                  29
+                </p>
+                <p class="master-class__month">
                   декабря
                 </p>
               </div>
@@ -403,7 +416,7 @@
                 100 английских слов вдень с
                 помощью 3 правил
               </p>
-              <img src="img/master-classes-desktop--6-@1x.jpg" width="440" height="252"
+              <img src="img/master-classes-desktop--6-@1x.jpg" class="master-classes__img" width="440" height="252"
                    alt="Мастер-класс как выучить по 100 английских слов вдень с помощью 3 правил">
             </a>
           </li>
