Добавляет разметку Best organization

--- a/source/main.html
+++ b/source/main.html
@@ -426,6 +426,22 @@
         </a>
       </div>
     </section>
+    <section class="best-organization">
+      <div class="best-organization__inner container">
+        <h2 class="h2 best-organization__title">
+          Курсы от лучших
+          организаций
+        </h2>
+        <ul class="best-organization__list">
+          <li class="best-organization__item">
+
+          </li>
+        </ul>
+        <a href="#" class="button best-organization__watch-more">
+          Смотреть все школы
+        </a>
+      </div>
+    </section>
   </main>
   <footer class="site-footer">
     <div class="container site-footer__inner-top">
