Добавляет разметку Featured Article

--- a/source/main.html
+++ b/source/main.html
@@ -1015,6 +1015,37 @@
         </a>
       </div>
     </section>
+    <section class="featured-articles">
+      <div class="featured-articles__inner container">
+        <h2 class="h2 featured-articles__inner">
+          Рекомендованные
+          статьи
+        </h2>
+        <ul class="featured-articles__list">
+          <li class="featured-articles__item">
+            <article class="article">
+              <a href="#" class="article__image">
+                <img src="img/article-desktop-@1x.jpg" width="430" height="242" alt=" Как выучить по 100 английских слов в день">
+              </a>
+              <div class="article__info-block">
+                <h3 class="article__name">
+                  <a href="#">
+                    Как выучить по 100
+                    английских слов в день
+                  </a>
+                </h3>
+                <p class="article__text">
+                  Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.
+                </p>
+                <p class="article__time">
+                  20.12.2019
+                </p>
+              </div>
+            </article>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer class="site-footer">
     <div class="container site-footer__inner-top">
