Добавляет кориктеровку стилей под макет 320

--- a/source/main.html
+++ b/source/main.html
@@ -1024,7 +1024,49 @@
         <ul class="featured-articles__list">
           <li class="featured-articles__item">
             <article class="article">
-              <a href="#" class="article__image">
+              <a href="#" class="article__img">
+                <img src="img/article-desktop-@1x.jpg" width="430" height="242" alt=" Как выучить по 100 английских слов в день">
+              </a>
+              <div class="article__info-block">
+                <h3 class="article__name">
+                  <a href="#">
+                    Как выучить по 100
+                    английских слов в день
+                  </a>
+                </h3>
+                <p class="article__text">
+                  Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.
+                </p>
+                <p class="article__time">
+                  20.12.2019
+                </p>
+              </div>
+            </article>
+          </li>
+          <li class="featured-articles__item">
+            <article class="article">
+              <a href="#" class="article__img">
+                <img src="img/article-desktop-@1x.jpg" width="430" height="242" alt=" Как выучить по 100 английских слов в день">
+              </a>
+              <div class="article__info-block">
+                <h3 class="article__name">
+                  <a href="#">
+                    Как выучить по 100
+                    английских слов в день
+                  </a>
+                </h3>
+                <p class="article__text">
+                  Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.
+                </p>
+                <p class="article__time">
+                  20.12.2019
+                </p>
+              </div>
+            </article>
+          </li>
+          <li class="featured-articles__item">
+            <article class="article">
+              <a href="#" class="article__img">
                 <img src="img/article-desktop-@1x.jpg" width="430" height="242" alt=" Как выучить по 100 английских слов в день">
               </a>
               <div class="article__info-block">
@@ -1044,6 +1086,9 @@
             </article>
           </li>
         </ul>
+        <a href="#" class="button featured-articles__show-more">
+          Смотреть все статьи
+        </a>
       </div>
     </section>
   </main>
