Добавляет блок Proposition

--- a/source/main.html
+++ b/source/main.html
@@ -1091,6 +1091,30 @@
         </a>
       </div>
     </section>
+    <section class="proposition">
+      <div class="proposition__inner container">
+        <div class="proposition__img">
+          <picture>
+            <img src="img/proposition-mobile-@1x.jpg" width="257" height="171" alt="Вы преподавательили представляетеучебное заведение?">
+          </picture>
+        </div>
+        <div class="proposition__info-block">
+          <h2 class="h2 proposition__title">
+            Вы преподаватель
+            или представляете
+            учебное заведение?
+          </h2>
+          <p>
+            Зарегистрируйтесь на GetSkill и
+            тысячи пользователей увидяn
+            Ваши курсы
+          </p>
+          <a href="#" class="button proposition__show-more">
+            Разместить  организацию
+          </a>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="site-footer">
     <div class="container site-footer__inner-top">
