Добавляет стилизацию блока Proposition

--- a/source/main.html
+++ b/source/main.html
@@ -1104,7 +1104,7 @@
             или представляете
             учебное заведение?
           </h2>
-          <p>
+          <p class="proposition__text">
             Зарегистрируйтесь на GetSkill и
             тысячи пользователей увидяn
             Ваши курсы
