Багфикс Seo Text

--- a/source/main.html
+++ b/source/main.html
@@ -1115,6 +1115,21 @@
         </div>
       </div>
     </section>
+    <div class="seo-text seo-text--main-page">
+      <div class="seo-text__inner container">
+        <div class="seo-text__wrapper">
+          <p>
+            Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового
+          </p>
+        </div>
+        <a href="#" class="seo-text__show-more">
+          Читать дальше
+          <svg width="6" height="15">
+            <use xlink:href="#icon-light-gray-down"></use>
+          </svg>
+        </a>
+      </div>
+    </div>
   </main>
   <footer class="site-footer">
     <div class="container site-footer__inner-top">
