--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2232,8 +2232,8 @@
                 </a>
               </li>
             </ul>
-            <div class="catalog__seo-text">
-              <div class="catalog__text-wrapper">
+            <div class="seo-text catalog__seo-text">
+              <div class="seo-text__wrapper">
                 <p>
                   Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
                   осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений
@@ -2242,7 +2242,7 @@
                   сделать текст более привлекательным и живым для визуально-слухового
                 </p>
               </div>
-              <a href="#" class="catalog__open-text">
+              <a href="#" class="seo-text__show-more">
                 Читать дальше
                 <svg width="6" height="15">
                   <use xlink:href="#icon-light-gray-down"></use>
