Добавляет адаптив от 992 до 1366

--- a/source/main.html
+++ b/source/main.html
@@ -286,6 +286,23 @@
     </nav>
   </header>
   <main class="site-main">
+    <section class="breadcrumbs">
+      <div class="container">
+        <h2 class="visually-hidden">
+          Постраничная Навигация
+        </h2>
+        <ul class="breadcrumbs__list">
+          <li class="breadcrumbs__item">
+            <a href="/">
+              Главная
+            </a>
+          </li>
+          <li>
+            Поиск
+          </li>
+        </ul>
+      </div>
+    </section>
     <section class="promo">
       <div class="promo__inner container">
         <h1 class="h1 promo__title">
