--- a/source/index.html
+++ b/source/index.html
@@ -293,6 +293,11 @@
             Главная страница
           </a>
         </li>
+        <li>
+          <a href="deals.html">
+            Сделки
+          </a>
+        </li>
       </ul>
     </div>
   </main>
