Добавляет редактирования сделки

--- a/source/index.html
+++ b/source/index.html
@@ -298,6 +298,11 @@
             Сделки
           </a>
         </li>
+        <li>
+          <a href="deals-edit.html">
+            Сделки редактирования
+          </a>
+        </li>
       </ul>
     </div>
   </main>
