--- a/source/index.html
+++ b/source/index.html
@@ -303,6 +303,11 @@
             Сделки редактирования
           </a>
         </li>
+        <li>
+          <a href="clients-list.html">
+           Клиенты
+          </a>
+        </li>
       </ul>
     </div>
   </main>
