Добавляет Редатирования клиентов

--- a/source/index.html
+++ b/source/index.html
@@ -308,6 +308,16 @@
            Клиенты
           </a>
         </li>
+        <li>
+          <a href="deals-clients-edit.html">
+            Клиенты редактирования
+          </a>
+        </li>
+        <li>
+          <a href="not-registration-favorites.html">
+            Избранное для незарегистрированных
+          </a>
+        </li>
       </ul>
     </div>
   </main>
