Добавляет страницу аналитика

--- a/source/index.html
+++ b/source/index.html
@@ -318,6 +318,11 @@
             Избранное для незарегистрированных
           </a>
         </li>
+        <li>
+          <a href="analytics.html">
+            Аналитика
+          </a>
+        </li>
       </ul>
     </div>
   </main>
