Добавляет страницу статтей

--- a/source/index.html
+++ b/source/index.html
@@ -323,6 +323,11 @@
             Аналитика
           </a>
         </li>
+        <li>
+          <a href="articles.html">
+            Статьи от Get Skill
+          </a>
+        </li>
       </ul>
     </div>
   </main>
