Добаляет изменения в страницу articles и страницу articles-page

--- a/source/index.html
+++ b/source/index.html
@@ -328,6 +328,11 @@
             Статьи от Get Skill
           </a>
         </li>
+        <li>
+          <a href="article-page.html">
+            Статья
+          </a>
+        </li>
       </ul>
     </div>
   </main>
