Добавляет страницу статьи

--- a/source/index.html
+++ b/source/index.html
@@ -333,6 +333,16 @@
             Статья
           </a>
         </li>
+        <li>
+          <a href="article-page-not-login.html">
+            Статья Без коментов
+          </a>
+        </li>
+        <li>
+          <a href="article-page-login.html">
+            Статья Комент
+          </a>
+        </li>
       </ul>
     </div>
   </main>
