--- a/source/article-page-not-login.html
+++ b/source/article-page-not-login.html
@@ -503,7 +503,7 @@
           <section class="reviews article-page__reviews">
             <div class="reviews__info">
               <h2 class="h2">
-                Отзывы
+                Комментарии
               </h2>
               <p class="reviews__count">
                 0
